fix: overflow-x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,4 +12,5 @@ body,
   padding: 0;
   font-family: "PT Sans", sans-serif;
   background: #fafafa;
+  overflow-x: hidden;
 }
